--- a/part3/phonebookbackend/package.json
+++ b/part3/phonebookbackend/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
+    "mongoose": "^6.2.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
